# services/app-auth/internal/core /entity/user.go
@@ -1,14 +1,9 @@
 package entity
 
 type User struct {
-	Name     string
-	Email    string
-	Id       string
-	Phone    string
-	Password string
-}
-
-type Otp struct {
-	PhoneNumber string
-	Code        string
+	UserId      string `json:"user_id" `
+	UserName    string `json:"username" `
+	Email       string `json:"email" `
+	PhoneNumber string `json:"phone_number"`
+	Hash        string `json:"_"`
 }
